# TransJAX

./: .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.yaml  demo.ipynb  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/test_documentation/: test_documentation_MLclm_varcon.md  test_documentation_MLclm_varctl.md  test_documentation_MLclm_varpar.md  test_documentation_SoilTemperatureMod.md  test_documentation_abortutils.md  test_documentation_clm_time_manager.md  test_documentation_fileutils.md  test_documentation_ncdio_pio.md
docs/translation_notes/: MLCanopyFluxesMod_translation_notes.md  MLCanopyFluxesType_translation_notes.md  MLCanopyNitrogenProfileMod_translation_notes.md  MLCanopyTurbulenceMod_translation_notes.md  MLCanopyWaterMod_translation_notes.md  MLLeafBoundaryLayerMod_translation_notes.md  MLLeafFluxesMod_translation_notes.md  MLLeafHeatCapacityMod_translation_notes.md  MLLeafPhotosynthesisMod_translation_notes.md  MLLongwaveRadiationMod_translation_notes.md  MLMathToolsMod_translation_notes.md  MLPlantHydraulicsMod_translation_notes.md  MLSolarRadiationMod_translation_notes.md  MLWaterVaporMod_translation_notes.md  MLclm_varcon_translation_notes.md  MLclm_varpar_translation_notes.md  MLinitVerticalMod_translation_notes.md  SoilStateInitTimeConstMod_translation_notes.md  SurfaceAlbedoMod_translation_notes.md  clm_time_manager_translation_notes.md  clm_varctl_translation_notes.md  clm_varorb_translation_notes.md  lnd_comp_mct_translation_notes.md
examples/: quickstart.ipynb
fortran_analyzer/: __init__.py  analyzer.py  cli.py
fortran_analyzer/analysis/: call_graph_builder.py  translation_decomposer.py
fortran_analyzer/config/: project_config.py
fortran_analyzer/parser/: fortran_parser.py
fortran_analyzer/visualization/: visualizer.py
jax-agents/: README.md  config.yaml  pyproject.toml  requirements.txt  run_translation_workflow.sh
jax-agents/examples/: generate_tests.py  repair_agent_example.py  translate_with_json.py
src/: __init__.py
src/clm_src_biogeophys/: CanopyStateType.py  SoilStateType.py  SoilTemperatureMod.py  TemperatureType.py  __init__.py
src/clm_src_cpl/: __init__.py  lnd_comp_mct.py  lnd_comp_mct_params.py
src/clm_src_main/: PatchType.py  __init__.py  clm_varpar.py  decompMod.py  initSubgridMod.py
src/clm_src_utils/: __init__.py  clm_time_manager.py  clm_time_manager_params.py  clm_varorb.py  clm_varorb_params.py  fileutils.py  spmdMod.py
src/multilayer_canopy/: MLCanopyFluxesMod.py  MLCanopyFluxesType.py  MLCanopyNitrogenProfileMod.py  MLCanopyWaterMod.py  (+16 more)
tests/: README.md  __init__.py  conftest.py  test_imports.py
(+174 files in other folders)
